--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,21 @@
 ::-webkit-scrollbar-thumb {
   background: #454f5b;
 }
+
+@layer components {
+  .btn-mid {
+    height: 2.25rem;
+    min-height: 2.25rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-size: 0.875rem;
+  }
+
+  .input-mid {
+    height: 2.25rem;
+    min-height: 2.25rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-size: 0.875rem;
+  }
+}
