--- a/src/components/AutoComplete/autoComplete.css
+++ b/src/components/AutoComplete/autoComplete.css
@@ -3,7 +3,7 @@
 }
 
 .select-search-select {
-  @apply bg-base-300 rounded-md absolute h-1/3 z-50 hidden overflow-auto;
+  @apply bg-base-300 rounded-md absolute h-min max-h-96 z-50 hidden overflow-auto;
 }
 
 .select-search-container.select-search-has-focus .select-search-select {
