--- a/src/components/AutoComplete/AutoComplete.css
+++ b/src/components/AutoComplete/AutoComplete.css
@@ -1,32 +1,27 @@
-.select-search-container {
-  @apply w-full;
-}
-
-.select-search-select {
-  @apply bg-base-300 rounded-md absolute h-min max-h-96 z-50 hidden overflow-auto;
-}
-
-.select-search-container.select-search-has-focus .select-search-select {
-  @apply block;
-}
-
 .react-select-container {
-  @apply w-full;
+  @apply w-full h-9;
 }
 
 .react-select__control {
-  @apply input input-mid input-bordered text-base;
+  @apply input input-mid input-bordered text-base h-9 !important;
 }
 
 .react-select__input,
 .react-select__single-value,
-.react-select__placeholder,
 .react-select__menu-notice {
-  @apply font-normal text-sm normal-case !important;
+  @apply text-base font-semibold normal-case !important;
+}
+
+.react-select__placeholder {
+  @apply text-base font-semibold normal-case text-gray-400 !important;
 }
 
 .react-select__menu {
   @apply bg-base-300;
+}
+
+.react-select__menu-list {
+  @apply max-h-80 !important;
 }
 
 .react-select__option {
