--- a/src/components/DatePicker/DatePicker.css
+++ b/src/components/DatePicker/DatePicker.css
@@ -93,3 +93,7 @@
 .react-datepicker__day--range-end {
   @apply bg-primary hover:text-gray-700 hover:bg-white;
 }
+
+.react-datepicker__today-button {
+  @apply text-center cursor-pointer hover:text-primary;
+}
