b2b scraping and stedi

--- a/src/components/DatePicker/DatePicker.css
+++ b/src/components/DatePicker/DatePicker.css
@@ -1,3 +1,7 @@
+.react-datepicker {
+  @apply text-center;
+}
+
 .react-datepicker__input-container input {
   @apply block w-full text-base md:text-sm bg-white border border-gray-300 rounded shadow-sm form-input;
 }
@@ -95,5 +99,5 @@
 }
 
 .react-datepicker__today-button {
-  @apply text-center cursor-pointer hover:text-primary;
+  @apply text-center cursor-pointer hover:text-primary btn btn-mid;
 }
